# lidar

./: .gitignore  CMakeLists.txt  README.md  Toolchain-ARMv7.cmake
aes/: Makefile  aes.c  aes.h  test.c
doc/: 20160810.txt  Environment Preparation Steps.txt  Get Started.txt  Miscellaneous.txt  Network Configuration.txt  README.txt
doc/deprecated/: README.txt
html/: bower.json  index.html
html/css/: dashboard.css
html/js/: index_controller.js
libs/xsens/include/: xsensdeviceapi.h  xstypes.h
libs/xsens/include/xcommunication/: iointerfacefile.h  mtwsdidata.h  packetfixeddata.h  streaminterface.h  synclinegmt.h
libs/xsens/include/xsens/: xdaconfig.h  xdainfo.h  xsaccesscontrolmode.h  xsalignmentframe.h  xsarray.h  xsbaud.h  xscalibrateddatamode.h  xscallback.h  xscallbackplainc.h  xsconnectivitystate.h  xscontrol.h  xscontrolline.h  xscoordinatesystem.h  xscopy.h  xsdef.h  xsdevice.h  xsdeviceconfiguration.h  xsdeviceid.h  xsdevicemode.h  xsdevicemodeps.h  xsdevicemoder.h  xsdeviceoptionflag.h  xsdeviceptr.h  xsdeviceptrarray.h  xsdeviceptrlist.h  xsdeviceref.h  xsdevicestate.h  xsdid.h  xsens_compat.h  xserrormode.h  xsfilterprofile.h  xsfilterprofilearray.h  xsfilterprofilelist.h  xsfloatformat.h  xsgpspvtdata.h  xsint64array.h  xsintlist.h  xsnetworkscanner.h  xsnmeastringtype.h  xsoption.h  (+27 more)
new/: Makefile  aes.c  aes.h  helper.c  helper.h  lidar.c  lidar.h  main  main.c  raspi.c  raspi.h  repository.c  repository.h  serial.c  test.ini  xsens.c  xsens.h  xsens_api_wrapper.cpp  xsens_api_wrapper.h
node/: binding.gyp  index.js  package.json
node/src/: Hello.cc  Hello.h  module1.cc  module1.cpp  utilities.cpp  utilities.h
node/test/: test_module1.js
preqs/: FindUUID.cmake  README.txt
prereq/: FindUUID.cmake  FindWiringPi.cmake
scripts/: build.sh  clean.sh  lidar  x
src/: Makefile  Version.h.in  broadcast.c  helper.c  helper.h  i2ctest.cpp  lidar.c  lidar.h  linux_time.c  linux_time.h  main.c  main.ini  mock_gps.c  raspi.c  raspi.h  receive.c  repository.c  repository.h  sample_server.c  send.c  serial.c  serial.h  step_motor.c  test.c  test.ini  testmain.c  vlp16.h  xsens.h  xsens_api_wrapper.cpp  xsens_api_wrapper.h
src_cpp/: config.h  example_mt_ix_mk4.cpp  src_example_mtix.vcxproj  src_examples.sln
src_cpp/include/xcommunication/: legacydatapacket.h  messagelocation.h
src_cpp/include/xsens/: xsanalogindata.h  xsbaudcode.h  xsdatapacket.h  xseuler.h  xslibraryloader.h  xsmalloc.h  xsmath.h  xsmessagearray.h  xsmessagelist.h  xsoutputconfiguration.h  xsoutputconfigurationlist.h  xsoutputmode.h  xsquaternion.h  xsrawgnsspvtdata.h  xsrawgpsdop.h  xsresultvalue.h  xsrssi.h  xsstring.h  xstriggerindicationdata.h
src_cpp/xcommunication/: enumerateusbdevices.cpp  int_xsdatapacket.cpp  int_xsdatapacket.dpp  iointerface.cpp  iointerfacefile.cpp  legacydatapacket.cpp  synclinegmt.c  synclinemk4.c  usbinterface.cpp
src_cpp/xstypes/: Makefile  datapacket_p.h  xsatomicint.h  xsbaudrate.h  xsbusid.h  xsbytearray.c  xsdataformat.h  xsdataidentifier.h  xsdatapacket.cpp  xseuler.c  xsfile.c  xsfilepos.h  xsintarray.h  xsmalloc.c  xsmath.c  xsmatrix.c  xsmatrix.h  xsmutex.h  xsoutputconfiguration.c  xsoutputconfigurationarray.c  xsoutputconfigurationarray.h  xsoutputsettings.h  xsportinfo.c  xsportinfoarray.c  xsportinfolist.h  xsrawgnsssatinfo.h  xsrssi.c  xssdidata.h  xssocket.c  xsstringarray.c  xsstringarray.h  xssyncfunction.h  xssyncpolarity.h  xssyncsettingarray.h  xstime.c  xstimestamp.h  xstriggerindicationdata.c  xstypedefs.c  xstypesconfig.h  xstypesinfo.h  (+3 more)
t++/: Makefile  helper.c  helper.h  main  main.cpp  receive.c  receive.h  serial.c  serial.h
test/: Makefile  broadcast.c  broadcast.h  main  main.c  send_gprmc.c  send_gprmc.h  test.c  test1.c  test2.c
xsens/: Makefile  clean.bat  conio.c  copy_local.bat  copysrc.bat  src_example_mtix.vcxproj  src_example_mtix.vcxproj.filters
xsens/include/xcommunication/: enumerateusbdevices.h  int_xsdatapacket.h  iointerface.h  iprotocolhandler.h  packetstamper.h  protocolhandler.h  serialinterface.h  synclinemk4.h  usbinterface.h  xcommunicationconfig.h  xslibusb.h  xsudev.h  xswinusb.h
xsens/include/xsens/: pstdint.h  xsarray.h  xsawindasnapshot.h  xsbytearray.h  xscalibrateddata.h  xsdebugcounters.h  xsdeviceidarray.h  xsdeviceidlist.h  xsexception.h  xsfile.h  xsinforequest.h  xsmatrix3x3.h  xsmessage.h  xsportinfoarray.h  xsrange.h  xsrawgpstimeutc.h  xsscrdata.h  xssocket.h  xstime.h  xstypesconfig.h  xsvector3.h  xsxbusmessageid.h
xsens/xcommunication/: Makefile  mtwsdidata.cpp  packetfixeddata.cpp  packetstamper.cpp  packetstamper.dpp  protocolhandler.cpp  serialinterface.cpp  xslibusb.cpp  xsudev.cpp  xswinusb.cpp
xsens/xstypes/: datapacket_p.cpp  resource.h  xsarray.c  xsawindasnapshot.c  xsbaud.c  xscalibrateddata.c  xsdeviceid.c  xsdeviceidarray.c  xsgpspvtdata.c  xsint64array.c  xsintarray.c  xslibraryloader.c  xsmatrix3x3.c  xsmessage.c  xsmessagearray.c  xsquaternion.c  xsrange.c  xsresultvalue.c  xssdidata.c  xssimpleversion.c  xsstring.c  xssyncsetting.c  xssyncsettingarray.c  xsthread.c  xstimestamp.c  xsutctime.c  xsvector.c
