CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(lidar)

set (LIDAR_VERSION_MAJOR 0)
set (LIDAR_VERSION_MINOR 1)

SET (CMAKE_BUILD_TYPE "Debug")
SET (CMAKE_INSTALL_PREFIX "/opt/lidar")

OPTION (LIDAR_FLAG "The flag for a short message." ON)

#SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin/")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

CONFIGURE_FILE (
  "${PROJECT_SOURCE_DIR}/src/Version.h.in"
  "${PROJECT_BINARY_DIR}/include/Version.h"
)
INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}/include/")

FILE(GLOB TESTMAIN_SOURCE "${CMAKE_SOURCE_DIR}/src/testmain.c")
ADD_EXECUTABLE(testmain ${TESTMAIN_SOURCE})

FILE(GLOB RECEIVE_SOURCE "${CMAKE_SOURCE_DIR}/src/receive.c")
ADD_EXECUTABLE(receive ${RECEIVE_SOURCE})

FILE(GLOB BROADCAST_SOURCE "${CMAKE_SOURCE_DIR}/src/broadcast.c")
ADD_EXECUTABLE(broadcast ${BROADCAST_SOURCE})

#FILE(GLOB SAMPLE_SOURCE "${CMAKE_SOURCE_DIR}/src/sample_server.c")
#ADD_EXECUTABLE(sample ${SAMPLE_SOURCE})

INSTALL (TARGETS broadcast receive DESTINATION bin)
INSTALL (FILES "${PROJECT_BINARY_DIR}/include/Version.h" DESTINATION include)

INCLUDE(CPack)
