CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(lidar)

#SET (CMAKE_TOOLCHAIN_FILE "./Toolchain-ARMv7.cmake")

set (LIDAR_VERSION_MAJOR 0)
set (LIDAR_VERSION_MINOR 1)

SET (CMAKE_BUILD_TYPE "Debug")
SET (CMAKE_INSTALL_PREFIX "/opt/lidar")

OPTION (LIDAR_FLAG "The flag for a short message." ON)

SET(CMAKE_C_FLAGS_DEBUG "$ENV{CFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_C_FLAGS_RELEASE "$ENV{CFLAGS} -O3 -Wall")

#SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin/")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -std=c++11 -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -std=c++11 -O3 -Wall")

CONFIGURE_FILE (
  "${PROJECT_SOURCE_DIR}/src/Version.h.in"
  "${PROJECT_BINARY_DIR}/include/Version.h"
)
INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}/include/")

FIND_PACKAGE(WiringPi REQUIRED)
INCLUDE_DIRECTORIES(${WIRINGPI_INCLUDE_DIRS})

FILE(GLOB TESTMAIN_SOURCE "${CMAKE_SOURCE_DIR}/src/testmain.c")
ADD_EXECUTABLE(testmain ${TESTMAIN_SOURCE})

FILE(GLOB SERIAL_SOURCE "${CMAKE_SOURCE_DIR}/src/serial.c")
ADD_EXECUTABLE(serial ${SERIAL_SOURCE})
TARGET_LINK_LIBRARIES(serial ${WIRINGPI_LIBRARIES})

FILE(GLOB STEPMOTOR_SOURCE "${CMAKE_SOURCE_DIR}/src/step_motor.c")
ADD_EXECUTABLE(step_motor ${STEPMOTOR_SOURCE})
TARGET_LINK_LIBRARIES(step_motor ${WIRINGPI_LIBRARIES})

FILE(GLOB LED_SOURCE "${CMAKE_SOURCE_DIR}/src/led.c")
ADD_EXECUTABLE(led ${LED_SOURCE})
TARGET_LINK_LIBRARIES(led ${WIRINGPI_LIBRARIES})

FILE(GLOB SERIAL2_SOURCE "${CMAKE_SOURCE_DIR}/src/serial2.c")
ADD_EXECUTABLE(serial2 ${SERIAL2_SOURCE})

FILE(GLOB RECEIVE_SOURCE "${CMAKE_SOURCE_DIR}/src/receive.c")
ADD_EXECUTABLE(receive ${RECEIVE_SOURCE})

FILE(GLOB BROADCAST_SOURCE "${CMAKE_SOURCE_DIR}/src/broadcast.c")
ADD_EXECUTABLE(broadcast ${BROADCAST_SOURCE})

#FILE(GLOB SAMPLE_SOURCE "${CMAKE_SOURCE_DIR}/src/sample_server.c")
#ADD_EXECUTABLE(sample ${SAMPLE_SOURCE})

INSTALL (TARGETS broadcast receive DESTINATION bin)
INSTALL (FILES "${PROJECT_BINARY_DIR}/include/Version.h" DESTINATION include)

INCLUDE(CPack)
